Big progress on the IE8 and iPad layout issues. Primarily I was able to get IE8 to properly inherit all of the breakpoint layouts.  Yay.

--- a/sass/lt-ie9.scss
+++ b/sass/lt-ie9.scss
@@ -43,5 +43,14 @@
 			}
 		}
 	}
+}	
+}
+
+@include widest{
+#page{
+	#band{
+		background-color:cyan;
+	}
+}
 }
 
